[tool.poetry]
name = "uuid62"
version = "1.0.0"
description = "UUID representation in Base62 with conversion utilities."
authors = ["filippovitale"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "*"
black = { version = "*", allow-prereleases = true }
# coala-bears = { version = "*", allow-prereleases = true }
flake8 = "*"
hypothesis = "*"
ipykernel = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
# yala = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
