[tool.poetry]
name = "uuid62"
version = "1.0.0"
description = "UUID representation in Base62 with conversion utilities."
authors = ["filippovitale"]

[tool.poetry.dependencies]
python = "^3.6, ^3.7, ^3.8"

[tool.poetry.dev-dependencies]
hypothesis = "*"
pytest = "*"
pytest-cov = "*"
# autopep8 = "*"
# black = { version = "*", allow-prereleases = true }
# coala-bears = { version = "*", allow-prereleases = true }
# flake8 = "*"
# ipykernel = "*"
# mypy = "*"
# yala = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
